--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -18,10 +18,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:26.966202Z",
-     "iopub.status.busy": "2020-10-26T12:01:26.964871Z",
-     "iopub.status.idle": "2020-10-26T12:01:27.972509Z",
-     "shell.execute_reply": "2020-10-26T12:01:27.972000Z"
+     "iopub.execute_input": "2020-12-02T13:41:02.855048Z",
+     "iopub.status.busy": "2020-12-02T13:41:02.852612Z",
+     "iopub.status.idle": "2020-12-02T13:41:04.072523Z",
+     "shell.execute_reply": "2020-12-02T13:41:04.073140Z"
     }
    },
    "outputs": [],
@@ -54,10 +54,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:27.975680Z",
-     "iopub.status.busy": "2020-10-26T12:01:27.975274Z",
-     "iopub.status.idle": "2020-10-26T12:01:27.977537Z",
-     "shell.execute_reply": "2020-10-26T12:01:27.977191Z"
+     "iopub.execute_input": "2020-12-02T13:41:04.076764Z",
+     "iopub.status.busy": "2020-12-02T13:41:04.076299Z",
+     "iopub.status.idle": "2020-12-02T13:41:04.078994Z",
+     "shell.execute_reply": "2020-12-02T13:41:04.078425Z"
     }
    },
    "outputs": [],
@@ -81,10 +81,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:27.981529Z",
-     "iopub.status.busy": "2020-10-26T12:01:27.981085Z",
-     "iopub.status.idle": "2020-10-26T12:01:27.983156Z",
-     "shell.execute_reply": "2020-10-26T12:01:27.982716Z"
+     "iopub.execute_input": "2020-12-02T13:41:04.083426Z",
+     "iopub.status.busy": "2020-12-02T13:41:04.082966Z",
+     "iopub.status.idle": "2020-12-02T13:41:04.084725Z",
+     "shell.execute_reply": "2020-12-02T13:41:04.085080Z"
     }
    },
    "outputs": [],
@@ -110,10 +110,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:27.986417Z",
-     "iopub.status.busy": "2020-10-26T12:01:27.986006Z",
-     "iopub.status.idle": "2020-10-26T12:01:28.272304Z",
-     "shell.execute_reply": "2020-10-26T12:01:28.271894Z"
+     "iopub.execute_input": "2020-12-02T13:41:04.089185Z",
+     "iopub.status.busy": "2020-12-02T13:41:04.088649Z",
+     "iopub.status.idle": "2020-12-02T13:41:04.407700Z",
+     "shell.execute_reply": "2020-12-02T13:41:04.408234Z"
     }
    },
    "outputs": [],
@@ -170,10 +170,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:28.275970Z",
-     "iopub.status.busy": "2020-10-26T12:01:28.275515Z",
-     "iopub.status.idle": "2020-10-26T12:01:28.277653Z",
-     "shell.execute_reply": "2020-10-26T12:01:28.277253Z"
+     "iopub.execute_input": "2020-12-02T13:41:04.412868Z",
+     "iopub.status.busy": "2020-12-02T13:41:04.412403Z",
+     "iopub.status.idle": "2020-12-02T13:41:04.414357Z",
+     "shell.execute_reply": "2020-12-02T13:41:04.413865Z"
     }
    },
    "outputs": [],
@@ -199,10 +199,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:28.427938Z",
-     "iopub.status.busy": "2020-10-26T12:01:28.427461Z",
-     "iopub.status.idle": "2020-10-26T12:01:28.429120Z",
-     "shell.execute_reply": "2020-10-26T12:01:28.429589Z"
+     "iopub.execute_input": "2020-12-02T13:41:04.682385Z",
+     "iopub.status.busy": "2020-12-02T13:41:04.681866Z",
+     "iopub.status.idle": "2020-12-02T13:41:04.683420Z",
+     "shell.execute_reply": "2020-12-02T13:41:04.684077Z"
     }
    },
    "outputs": [],
@@ -222,10 +222,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:28.431758Z",
-     "iopub.status.busy": "2020-10-26T12:01:28.431193Z",
-     "iopub.status.idle": "2020-10-26T12:01:28.711484Z",
-     "shell.execute_reply": "2020-10-26T12:01:28.711883Z"
+     "iopub.execute_input": "2020-12-02T13:41:04.687411Z",
+     "iopub.status.busy": "2020-12-02T13:41:04.686051Z",
+     "iopub.status.idle": "2020-12-02T13:41:05.040757Z",
+     "shell.execute_reply": "2020-12-02T13:41:05.041238Z"
     }
    },
    "outputs": [],
@@ -245,10 +245,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:28.741164Z",
-     "iopub.status.busy": "2020-10-26T12:01:28.740740Z",
-     "iopub.status.idle": "2020-10-26T12:01:29.686402Z",
-     "shell.execute_reply": "2020-10-26T12:01:29.686811Z"
+     "iopub.execute_input": "2020-12-02T13:41:05.071035Z",
+     "iopub.status.busy": "2020-12-02T13:41:05.057718Z",
+     "iopub.status.idle": "2020-12-02T13:41:06.194219Z",
+     "shell.execute_reply": "2020-12-02T13:41:06.194613Z"
     }
    },
    "outputs": [],
@@ -285,10 +285,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:29.689776Z",
-     "iopub.status.busy": "2020-10-26T12:01:29.689345Z",
-     "iopub.status.idle": "2020-10-26T12:01:29.691642Z",
-     "shell.execute_reply": "2020-10-26T12:01:29.691255Z"
+     "iopub.execute_input": "2020-12-02T13:41:06.199095Z",
+     "iopub.status.busy": "2020-12-02T13:41:06.198189Z",
+     "iopub.status.idle": "2020-12-02T13:41:06.202201Z",
+     "shell.execute_reply": "2020-12-02T13:41:06.202686Z"
     }
    },
    "outputs": [],
@@ -309,10 +309,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:58.954677Z",
-     "iopub.status.busy": "2020-10-26T12:01:58.954201Z",
-     "iopub.status.idle": "2020-10-26T12:01:58.955895Z",
-     "shell.execute_reply": "2020-10-26T12:01:58.956270Z"
+     "iopub.execute_input": "2020-12-02T13:41:57.802610Z",
+     "iopub.status.busy": "2020-12-02T13:41:57.802137Z",
+     "iopub.status.idle": "2020-12-02T13:41:57.803836Z",
+     "shell.execute_reply": "2020-12-02T13:41:57.804307Z"
     }
    },
    "outputs": [],
@@ -332,10 +332,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:58.990608Z",
-     "iopub.status.busy": "2020-10-26T12:01:58.973378Z",
-     "iopub.status.idle": "2020-10-26T12:02:00.245763Z",
-     "shell.execute_reply": "2020-10-26T12:02:00.246214Z"
+     "iopub.execute_input": "2020-12-02T13:41:57.806872Z",
+     "iopub.status.busy": "2020-12-02T13:41:57.806249Z",
+     "iopub.status.idle": "2020-12-02T13:41:59.261289Z",
+     "shell.execute_reply": "2020-12-02T13:41:59.261890Z"
     }
    },
    "outputs": [],
@@ -370,10 +370,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:00.261392Z",
-     "iopub.status.busy": "2020-10-26T12:02:00.260991Z",
-     "iopub.status.idle": "2020-10-26T12:02:00.866225Z",
-     "shell.execute_reply": "2020-10-26T12:02:00.865735Z"
+     "iopub.execute_input": "2020-12-02T13:41:59.276543Z",
+     "iopub.status.busy": "2020-12-02T13:41:59.276152Z",
+     "iopub.status.idle": "2020-12-02T13:42:00.089574Z",
+     "shell.execute_reply": "2020-12-02T13:42:00.090043Z"
     }
    },
    "outputs": [],
@@ -408,10 +408,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:00.869538Z",
-     "iopub.status.busy": "2020-10-26T12:02:00.869087Z",
-     "iopub.status.idle": "2020-10-26T12:02:00.871280Z",
-     "shell.execute_reply": "2020-10-26T12:02:00.870823Z"
+     "iopub.execute_input": "2020-12-02T13:42:00.094149Z",
+     "iopub.status.busy": "2020-12-02T13:42:00.093688Z",
+     "iopub.status.idle": "2020-12-02T13:42:00.095856Z",
+     "shell.execute_reply": "2020-12-02T13:42:00.095393Z"
     }
    },
    "outputs": [],
@@ -437,10 +437,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:02.505792Z",
-     "iopub.status.busy": "2020-10-26T12:02:02.505160Z",
-     "iopub.status.idle": "2020-10-26T12:02:02.710581Z",
-     "shell.execute_reply": "2020-10-26T12:02:02.710147Z"
+     "iopub.execute_input": "2020-12-02T13:42:03.881180Z",
+     "iopub.status.busy": "2020-12-02T13:42:03.880685Z",
+     "iopub.status.idle": "2020-12-02T13:42:03.883498Z",
+     "shell.execute_reply": "2020-12-02T13:42:03.883889Z"
     }
    },
    "outputs": [],
@@ -460,10 +460,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:03.024589Z",
-     "iopub.status.busy": "2020-10-26T12:02:03.023690Z",
-     "iopub.status.idle": "2020-10-26T12:02:03.026818Z",
-     "shell.execute_reply": "2020-10-26T12:02:03.026338Z"
+     "iopub.execute_input": "2020-12-02T13:42:04.263750Z",
+     "iopub.status.busy": "2020-12-02T13:42:04.263321Z",
+     "iopub.status.idle": "2020-12-02T13:42:04.265318Z",
+     "shell.execute_reply": "2020-12-02T13:42:04.264888Z"
     }
    },
    "outputs": [],
@@ -483,10 +483,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:03.042512Z",
-     "iopub.status.busy": "2020-10-26T12:02:03.042040Z",
-     "iopub.status.idle": "2020-10-26T12:02:04.123869Z",
-     "shell.execute_reply": "2020-10-26T12:02:04.124282Z"
+     "iopub.execute_input": "2020-12-02T13:42:04.280523Z",
+     "iopub.status.busy": "2020-12-02T13:42:04.280075Z",
+     "iopub.status.idle": "2020-12-02T13:42:05.362015Z",
+     "shell.execute_reply": "2020-12-02T13:42:05.361467Z"
     }
    },
    "outputs": [],
@@ -516,10 +516,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:19.173857Z",
-     "iopub.status.busy": "2020-10-26T12:02:19.173379Z",
-     "iopub.status.idle": "2020-10-26T12:02:19.174798Z",
-     "shell.execute_reply": "2020-10-26T12:02:19.175340Z"
+     "iopub.execute_input": "2020-12-02T13:42:30.241978Z",
+     "iopub.status.busy": "2020-12-02T13:42:30.241450Z",
+     "iopub.status.idle": "2020-12-02T13:42:30.243151Z",
+     "shell.execute_reply": "2020-12-02T13:42:30.243636Z"
     }
    },
    "outputs": [],
@@ -534,10 +534,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:19.177386Z",
-     "iopub.status.busy": "2020-10-26T12:02:19.176934Z",
-     "iopub.status.idle": "2020-10-26T12:02:20.402463Z",
-     "shell.execute_reply": "2020-10-26T12:02:20.402124Z"
+     "iopub.execute_input": "2020-12-02T13:42:30.246553Z",
+     "iopub.status.busy": "2020-12-02T13:42:30.245659Z",
+     "iopub.status.idle": "2020-12-02T13:42:31.681250Z",
+     "shell.execute_reply": "2020-12-02T13:42:31.680813Z"
     }
    },
    "outputs": [],
@@ -567,10 +567,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:20.422020Z",
-     "iopub.status.busy": "2020-10-26T12:02:20.417837Z",
-     "iopub.status.idle": "2020-10-26T12:02:20.772094Z",
-     "shell.execute_reply": "2020-10-26T12:02:20.771681Z"
+     "iopub.execute_input": "2020-12-02T13:42:31.695739Z",
+     "iopub.status.busy": "2020-12-02T13:42:31.695329Z",
+     "iopub.status.idle": "2020-12-02T13:42:32.093926Z",
+     "shell.execute_reply": "2020-12-02T13:42:32.093543Z"
     }
    },
    "outputs": [],
@@ -597,10 +597,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:20.775401Z",
-     "iopub.status.busy": "2020-10-26T12:02:20.775025Z",
-     "iopub.status.idle": "2020-10-26T12:02:20.777125Z",
-     "shell.execute_reply": "2020-10-26T12:02:20.776726Z"
+     "iopub.execute_input": "2020-12-02T13:42:32.097713Z",
+     "iopub.status.busy": "2020-12-02T13:42:32.097233Z",
+     "iopub.status.idle": "2020-12-02T13:42:32.100009Z",
+     "shell.execute_reply": "2020-12-02T13:42:32.099575Z"
     }
    },
    "outputs": [],
@@ -619,10 +619,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:22.568126Z",
-     "iopub.status.busy": "2020-10-26T12:02:22.567625Z",
-     "iopub.status.idle": "2020-10-26T12:02:28.427407Z",
-     "shell.execute_reply": "2020-10-26T12:02:28.427887Z"
+     "iopub.execute_input": "2020-12-02T13:42:33.728595Z",
+     "iopub.status.busy": "2020-12-02T13:42:33.727631Z",
+     "iopub.status.idle": "2020-12-02T13:42:36.868981Z",
+     "shell.execute_reply": "2020-12-02T13:42:36.869519Z"
     }
    },
    "outputs": [],
@@ -642,10 +642,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:28.431629Z",
-     "iopub.status.busy": "2020-10-26T12:02:28.430947Z",
-     "iopub.status.idle": "2020-10-26T12:02:29.541246Z",
-     "shell.execute_reply": "2020-10-26T12:02:29.541862Z"
+     "iopub.execute_input": "2020-12-02T13:42:36.871990Z",
+     "iopub.status.busy": "2020-12-02T13:42:36.871440Z",
+     "iopub.status.idle": "2020-12-02T13:42:38.241572Z",
+     "shell.execute_reply": "2020-12-02T13:42:38.242092Z"
     }
    },
    "outputs": [],
@@ -666,10 +666,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:29.543966Z",
-     "iopub.status.busy": "2020-10-26T12:02:29.543498Z",
-     "iopub.status.idle": "2020-10-26T12:02:29.545939Z",
-     "shell.execute_reply": "2020-10-26T12:02:29.546389Z"
+     "iopub.execute_input": "2020-12-02T13:42:38.245495Z",
+     "iopub.status.busy": "2020-12-02T13:42:38.244363Z",
+     "iopub.status.idle": "2020-12-02T13:42:38.249026Z",
+     "shell.execute_reply": "2020-12-02T13:42:38.249928Z"
     }
    },
    "outputs": [],
@@ -683,9 +683,9 @@
    "source": [
     "## Regular space clustering\n",
     "\n",
-    "Clusters data objects in such a way, that cluster centers are at least in distance of $d_\\mathrm{min}$ to each other according to the given metric. The assignment of data objects to cluster centers is performed by Voronoi partioning.\n",
+    "Regular space clustering<cite data-cite=\"nbcluster-prinz2011markov\">(Prinz, 2011)</cite> assigns data objects in such a way, that cluster centers are at least in distance of $d_\\mathrm{min}$ to each other according to the given metric. The assignment of data objects to cluster centers is performed by Voronoi partioning.\n",
     "\n",
-    "Regular space clustering <cite data-cite=\"nbcluster-prinz2011markov\">(Prinz, 2011)</cite> is very similar to Hartigan’s leader algorithm <cite data-cite=\"nbcluster-hartigan1975clustering\">(Hartigan, 1975)</cite>. It consists of two passes through the data. Initially, the first data point is added to the list of centers. For every subsequent data point, if it has a greater distance than $d_\\mathrm{min}$ from every center, it also becomes a center. In the second pass, a Voronoi discretization with the computed centers is used to partition the data.\n",
+    "This clustering algorithm is very similar to Hartigan’s leader algorithm <cite data-cite=\"nbcluster-hartigan1975clustering\">(Hartigan, 1975)</cite>. It consists of two passes through the data. Initially, the first data point is added to the list of centers. For every subsequent data point, if it has a greater distance than $d_\\mathrm{min}$ from every center, it also becomes a center. In the second pass, a Voronoi discretization with the computed centers is used to partition the data.\n",
     "\n",
     "To perform regular space clustering, a corresponding [RegularSpace](../api/generated/deeptime.clustering.RegularSpace.rst#deeptime.clustering.RegularSpace) estimator can be created: "
    ]
@@ -695,10 +695,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:29.548430Z",
-     "iopub.status.busy": "2020-10-26T12:02:29.547971Z",
-     "iopub.status.idle": "2020-10-26T12:02:29.550586Z",
-     "shell.execute_reply": "2020-10-26T12:02:29.551037Z"
+     "iopub.execute_input": "2020-12-02T13:42:38.253071Z",
+     "iopub.status.busy": "2020-12-02T13:42:38.252147Z",
+     "iopub.status.idle": "2020-12-02T13:42:38.256275Z",
+     "shell.execute_reply": "2020-12-02T13:42:38.256893Z"
     }
    },
    "outputs": [],
@@ -722,10 +722,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:29.553542Z",
-     "iopub.status.busy": "2020-10-26T12:02:29.553100Z",
-     "iopub.status.idle": "2020-10-26T12:02:30.915048Z",
-     "shell.execute_reply": "2020-10-26T12:02:30.915528Z"
+     "iopub.execute_input": "2020-12-02T13:42:38.260253Z",
+     "iopub.status.busy": "2020-12-02T13:42:38.259318Z",
+     "iopub.status.idle": "2020-12-02T13:42:39.378848Z",
+     "shell.execute_reply": "2020-12-02T13:42:39.379397Z"
     }
    },
    "outputs": [],
@@ -745,10 +745,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:30.917694Z",
-     "iopub.status.busy": "2020-10-26T12:02:30.917220Z",
-     "iopub.status.idle": "2020-10-26T12:02:32.289295Z",
-     "shell.execute_reply": "2020-10-26T12:02:32.288806Z"
+     "iopub.execute_input": "2020-12-02T13:42:39.381723Z",
+     "iopub.status.busy": "2020-12-02T13:42:39.381237Z",
+     "iopub.status.idle": "2020-12-02T13:42:40.981406Z",
+     "shell.execute_reply": "2020-12-02T13:42:40.980928Z"
     }
    },
    "outputs": [],
