--- a/docs/source/notebooks/dmd.ipynb
+++ b/docs/source/notebooks/dmd.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Dynamic mode decomposition\n",
     "\n",
-    "Here we present the basic ideas behind a family of dynamic mode decomposition (DMD) methods. The principle idea is that DMD should be able to characterize / decompose potentially highly nonlinear dynamics by solving linear systems of equations and studying their spectral properties."
+    "Here we present the basic ideas behind a family of dynamic mode decomposition (DMD) methods. In particular the original \"standard DMD\"<cite data-cite=\"nbdmd-schmid2010dynamic\">(Schmid, 2010)</cite>, its variant \"exact DMD\"<cite data-cite=\"nbdmd-tu2013dynamic\">(Tu, 2013)</cite>, as well as \"extended DMD\" <cite data-cite=\"nbdmd-williams2015data\">(Williams, 2015)</cite>. The principle idea is that DMD should be able to characterize / decompose potentially highly nonlinear dynamics by solving linear systems of equations and studying their spectral properties."
    ]
   },
   {
@@ -47,7 +47,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:40.500084Z",
+     "iopub.status.busy": "2020-12-02T13:40:40.498172Z",
+     "iopub.status.idle": "2020-12-02T13:40:41.495100Z",
+     "shell.execute_reply": "2020-12-02T13:40:41.494618Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import deeptime as dt\n",
@@ -77,7 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:41.505087Z",
+     "iopub.status.busy": "2020-12-02T13:40:41.504640Z",
+     "iopub.status.idle": "2020-12-02T13:40:41.510467Z",
+     "shell.execute_reply": "2020-12-02T13:40:41.509990Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -103,7 +117,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:41.513933Z",
+     "iopub.status.busy": "2020-12-02T13:40:41.513407Z",
+     "iopub.status.idle": "2020-12-02T13:40:41.947311Z",
+     "shell.execute_reply": "2020-12-02T13:40:41.946769Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -120,7 +141,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:41.954406Z",
+     "iopub.status.busy": "2020-12-02T13:40:41.953796Z",
+     "iopub.status.idle": "2020-12-02T13:40:41.956570Z",
+     "shell.execute_reply": "2020-12-02T13:40:41.955988Z"
+    }
+   },
    "outputs": [],
    "source": [
     "standard_model = standard_dmd.fit((data[:-1], data[1:])).fetch_model()\n",
@@ -130,7 +158,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:41.960968Z",
+     "iopub.status.busy": "2020-12-02T13:40:41.960426Z",
+     "iopub.status.idle": "2020-12-02T13:40:41.963284Z",
+     "shell.execute_reply": "2020-12-02T13:40:41.962743Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(f\"Eigenvalues standard {standard_model.eigenvalues}, exact {exact_model.eigenvalues}\")"
@@ -146,7 +181,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:41.972628Z",
+     "iopub.status.busy": "2020-12-02T13:40:41.966595Z",
+     "iopub.status.idle": "2020-12-02T13:40:41.975087Z",
+     "shell.execute_reply": "2020-12-02T13:40:41.974505Z"
+    }
+   },
    "outputs": [],
    "source": [
     "traj_standard = standard_model.transform(data)\n",
@@ -163,7 +205,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:41.995272Z",
+     "iopub.status.busy": "2020-12-02T13:40:41.994708Z",
+     "iopub.status.idle": "2020-12-02T13:40:42.198148Z",
+     "shell.execute_reply": "2020-12-02T13:40:42.197182Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.scatter(*data.T, alpha=.5, marker='x', label='ground truth')\n",
@@ -219,7 +268,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:42.211907Z",
+     "iopub.status.busy": "2020-12-02T13:40:42.210870Z",
+     "iopub.status.idle": "2020-12-02T13:40:42.435097Z",
+     "shell.execute_reply": "2020-12-02T13:40:42.435476Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -248,7 +304,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:42.991380Z",
+     "iopub.status.busy": "2020-12-02T13:40:42.990441Z",
+     "iopub.status.idle": "2020-12-02T13:40:43.172348Z",
+     "shell.execute_reply": "2020-12-02T13:40:43.171818Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import deeptime as dt\n",
@@ -270,11 +333,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:43.176041Z",
+     "iopub.status.busy": "2020-12-02T13:40:43.175377Z",
+     "iopub.status.idle": "2020-12-02T13:40:56.202285Z",
+     "shell.execute_reply": "2020-12-02T13:40:56.202619Z"
+    }
+   },
    "outputs": [],
    "source": [
     "N = 25000\n",
-    "X = np.stack([np.random.uniform(-2, 2, size=(N,)), np.random.uniform(-1, 2, size=(N,))]).T\n",
+    "state = np.random.RandomState(seed=42)\n",
+    "X = np.stack([state.uniform(-2, 2, size=(N,)), state.uniform(-1, 2, size=(N,))]).T\n",
     "Y = system(X, n_jobs=8)"
    ]
   },
@@ -288,7 +359,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:56.205908Z",
+     "iopub.status.busy": "2020-12-02T13:40:56.205419Z",
+     "iopub.status.idle": "2020-12-02T13:40:56.207802Z",
+     "shell.execute_reply": "2020-12-02T13:40:56.207238Z"
+    }
+   },
    "outputs": [],
    "source": [
     "basis = dt.basis.Monomials(10)"
@@ -304,7 +382,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:56.328062Z",
+     "iopub.status.busy": "2020-12-02T13:40:56.327557Z",
+     "iopub.status.idle": "2020-12-02T13:40:56.461487Z",
+     "shell.execute_reply": "2020-12-02T13:40:56.462059Z"
+    }
+   },
    "outputs": [],
    "source": [
     "edmd_estimator = dt.decomposition.EDMD(basis, n_eigs=8)\n",
@@ -321,7 +406,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:56.477160Z",
+     "iopub.status.busy": "2020-12-02T13:40:56.476591Z",
+     "iopub.status.idle": "2020-12-02T13:40:56.625835Z",
+     "shell.execute_reply": "2020-12-02T13:40:56.626269Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.plot(np.real(edmd_model.eigenvalues), 'x')\n",
@@ -338,7 +430,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:56.716746Z",
+     "iopub.status.busy": "2020-12-02T13:40:56.715797Z",
+     "iopub.status.idle": "2020-12-02T13:40:56.734319Z",
+     "shell.execute_reply": "2020-12-02T13:40:56.734997Z"
+    }
+   },
    "outputs": [],
    "source": [
     "phi = np.real(edmd_model.transform(X))\n",
@@ -358,27 +457,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:56.755619Z",
+     "iopub.status.busy": "2020-12-02T13:40:56.751184Z",
+     "iopub.status.idle": "2020-12-02T13:40:58.890132Z",
+     "shell.execute_reply": "2020-12-02T13:40:58.890535Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8, 8))\n",
     "gs = fig.add_gridspec(ncols=2, nrows=2)\n",
     "\n",
     "ax = fig.add_subplot(gs[0, 0])\n",
+    "ax.scatter(*X.T, c=phi[:, 0], cmap='coolwarm')\n",
+    "ax.set_title('1st eigenfunction')\n",
+    "\n",
+    "ax = fig.add_subplot(gs[0, 1])\n",
     "ax.scatter(*X.T, c=phi[:, 1], cmap='coolwarm')\n",
     "ax.set_title('2nd eigenfunction')\n",
     "\n",
-    "ax = fig.add_subplot(gs[0, 1])\n",
+    "ax = fig.add_subplot(gs[1, 0])\n",
     "ax.scatter(*X.T, c=phi[:, 2], cmap='coolwarm')\n",
     "ax.set_title('3rd eigenfunction')\n",
     "\n",
-    "ax = fig.add_subplot(gs[1, 0])\n",
-    "ax.scatter(*X.T, c=phi[:, 3], cmap='coolwarm')\n",
-    "ax.set_title('4th eigenfunction')\n",
-    "\n",
     "ax = fig.add_subplot(gs[1, 1])\n",
-    "ax.scatter(*X.T, c=phi[:, 4], cmap='coolwarm')\n",
-    "ax.set_title('5th eigenfunction');"
+    "ax.scatter(*X.T, c=phi[:, 3], cmap='coolwarm')\n",
+    "ax.set_title('4th eigenfunction');"
    ]
   },
   {
@@ -391,10 +497,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:40:58.897077Z",
+     "iopub.status.busy": "2020-12-02T13:40:58.896470Z",
+     "iopub.status.idle": "2020-12-02T13:41:00.376166Z",
+     "shell.execute_reply": "2020-12-02T13:41:00.376709Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "kmeans = dt.clustering.Kmeans(n_clusters=5, n_jobs=4).fit(np.real(phi)).fetch_model()\n",
+    "kmeans = dt.clustering.Kmeans(n_clusters=6, n_jobs=4).fit(np.real(phi)).fetch_model()\n",
     "c = kmeans.transform(np.real(phi))\n",
     "\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\n",
