--- a/docs/source/notebooks/kcca.ipynb
+++ b/docs/source/notebooks/kcca.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kernel CCA\n",
+    "# Kernel VAMP / kernel CCA\n",
     "\n",
-    "This notebook illustrates how to use kernel canonical correlation analysis (kernel CCA) to compute coherent sets.\n",
+    "This notebook illustrates how to use kernel canonical correlation analysis (kernel CCA)<cite data-cite=\"nbkcca-bach2002kernel\">(Bach, 2002)</cite> to compute coherent sets.\n",
     "\n",
     "CCA <cite data-cite=\"nbkcca-hotelling1992relations\">(Hotelling, 1992)</cite> was originally developed to maximize the correlation between two multidimensional random variables $X$ and $Y$. Kernel CCA is a nonlinear variant of CCA, where the standard inner products are replaced by a kernel function $k$ (using the well-known *kernel trick*). Popular kernel functions are the polynomial kernel $k(x, x^\\prime) = (c + x^\\top x^\\prime)^p$ and the Gaussian kernel $k(x, x^\\prime) = \\exp(-\\|x-x^\\prime\\|_2^2/2\\sigma^2)$, see also [deeptime.kernels](../api/index_kernels.rst). In our setting, $Y$ is a time-lagged version of $X$, i.e., we consider the process $Y_t = X_{t + \\tau}$. Here, $\\tau$ is a fixed lag time. The kernel CCA problem <cite data-cite=\"nbkcca-bach2002kernel\">(Bach, 2002)</cite> can be written as an optimization problem of the form\n",
     "$$\n",
@@ -32,7 +32,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:08.558731Z",
+     "iopub.status.busy": "2020-12-02T13:44:08.556541Z",
+     "iopub.status.idle": "2020-12-02T13:44:09.617887Z",
+     "shell.execute_reply": "2020-12-02T13:44:09.618252Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -52,7 +59,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:09.623998Z",
+     "iopub.status.busy": "2020-12-02T13:44:09.623345Z",
+     "iopub.status.idle": "2020-12-02T13:44:37.539795Z",
+     "shell.execute_reply": "2020-12-02T13:44:37.540281Z"
+    }
+   },
    "outputs": [],
    "source": [
     "n = 3000\n",
@@ -70,7 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:37.543618Z",
+     "iopub.status.busy": "2020-12-02T13:44:37.543210Z",
+     "iopub.status.idle": "2020-12-02T13:44:37.545455Z",
+     "shell.execute_reply": "2020-12-02T13:44:37.544987Z"
+    }
+   },
    "outputs": [],
    "source": [
     "sigma = 1\n",
@@ -87,7 +108,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:37.548814Z",
+     "iopub.status.busy": "2020-12-02T13:44:37.548386Z",
+     "iopub.status.idle": "2020-12-02T13:44:57.241882Z",
+     "shell.execute_reply": "2020-12-02T13:44:57.241021Z"
+    }
+   },
    "outputs": [],
    "source": [
     "kcca_estimator = dt.decomposition.KernelCCA(kernel, n_eigs=9, epsilon=1e-3)\n",
@@ -106,7 +134,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:57.258959Z",
+     "iopub.status.busy": "2020-12-02T13:44:57.253829Z",
+     "iopub.status.idle": "2020-12-02T13:44:58.207113Z",
+     "shell.execute_reply": "2020-12-02T13:44:58.207515Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -150,7 +183,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:58.233784Z",
+     "iopub.status.busy": "2020-12-02T13:44:58.214332Z",
+     "iopub.status.idle": "2020-12-02T13:44:58.235602Z",
+     "shell.execute_reply": "2020-12-02T13:44:58.236054Z"
+    }
+   },
    "outputs": [],
    "source": [
     "kmeans = dt.clustering.Kmeans(n_clusters=9, n_jobs=8).fit(ev_real).fetch_model()"
@@ -167,7 +207,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:58.238679Z",
+     "iopub.status.busy": "2020-12-02T13:44:58.238061Z",
+     "iopub.status.idle": "2020-12-02T13:44:58.494849Z",
+     "shell.execute_reply": "2020-12-02T13:44:58.495326Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -180,7 +225,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:58.499143Z",
+     "iopub.status.busy": "2020-12-02T13:44:58.498477Z",
+     "iopub.status.idle": "2020-12-02T13:45:13.830459Z",
+     "shell.execute_reply": "2020-12-02T13:45:13.772283Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ani = bickleyData.make_animation(s=100, c=c/9, stride=2)\n",
@@ -218,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
