--- a/docs/source/notebooks/kedmd.ipynb
+++ b/docs/source/notebooks/kedmd.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Kernel EDMD\n",
     "\n",
-    "This notebook illustrates how to use kernel extended dynamic mode decomposition (kernel EDMD) to compute eigenfunctions of the Koopman operator and Perron-Frobenius operator.\n",
+    "This notebook illustrates how to use kernel extended dynamic mode decomposition (kernel EDMD)<cite data-cite=\"nbkedmd-williams2016kernel\">(Williams, 2016)</cite> to compute eigenfunctions of the Koopman operator and Perron-Frobenius operator.\n",
     "\n",
-    "The original derivation of kernel EDMD for the Koopman operator, obtained by kernelizing EDMD, can be found in <cite data-cite=\"nbkedmd-williams2016kernel\">(Williams, 2016)</cite>. An alternative derivation using covariance and cross-covariance operators defined on reproducing kernel Hilbert spaces, highlighting also relationships with conditional mean embeddings of distributions and the Perron-Frobenius operator, is presented in <cite data-cite=\"nbkedmd-klus2019eigendecomposition\">(Klus, 2019)</cite>. High-dimensional molecular dynamics problems can be found in <cite data-cite=\"nbkedmd-klus2018kernel\">(Klus, 2018)</cite>.\n",
+    "An alternative derivation of kernel EDMD using covariance and cross-covariance operators defined on reproducing kernel Hilbert spaces, highlighting also relationships with conditional mean embeddings of distributions and the Perron-Frobenius operator, is presented in <cite data-cite=\"nbkedmd-klus2019eigendecomposition\">(Klus, 2019)</cite>. High-dimensional molecular dynamics problems can be found in <cite data-cite=\"nbkedmd-klus2018kernel\">(Klus, 2018)</cite>.\n",
     "\n",
     "Given training data $\\{x_i\\}_{i=1}^m$ and $\\{y_i\\}_{i=1}^m$, where $y_i$ is a time-lagged version of $x_i$, let $\\varphi$ denote an eigenfunction and $\\lambda$ the corresponding eigenvalue. For the Perron-Frobenius operator, we obtain kernel-based approximations of eigenvalues and eigenfunctions by\n",
     "$$(G_{XX}+m\\varepsilon I)^{-1}G_{XY} \\mathbf{v} = \\lambda \\mathbf{v}, \\quad \\varphi = \\Phi G_{XX}^{-1} \\mathbf{v}$$\n",
@@ -20,7 +20,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:41.033643Z",
+     "iopub.status.busy": "2020-12-02T13:37:41.032044Z",
+     "iopub.status.idle": "2020-12-02T13:37:42.227204Z",
+     "shell.execute_reply": "2020-12-02T13:37:42.227584Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -39,7 +46,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:42.245022Z",
+     "iopub.status.busy": "2020-12-02T13:37:42.231771Z",
+     "iopub.status.idle": "2020-12-02T13:37:42.470215Z",
+     "shell.execute_reply": "2020-12-02T13:37:42.469753Z"
+    }
+   },
    "outputs": [],
    "source": [
     "xy = np.arange(-2, 2, 0.1)\n",
@@ -64,7 +78,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:50.911815Z",
+     "iopub.status.busy": "2020-12-02T13:37:50.910530Z",
+     "iopub.status.idle": "2020-12-02T13:37:51.104655Z",
+     "shell.execute_reply": "2020-12-02T13:37:51.105267Z"
+    }
+   },
    "outputs": [],
    "source": [
     "h = 1e-3 # step size of the Euler-Maruyama integrator\n",
@@ -89,7 +110,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:53.303092Z",
+     "iopub.status.busy": "2020-12-02T13:37:53.302609Z",
+     "iopub.status.idle": "2020-12-02T13:37:53.304865Z",
+     "shell.execute_reply": "2020-12-02T13:37:53.304446Z"
+    }
+   },
    "outputs": [],
    "source": [
     "m = 2500 # number of training data points\n",
@@ -108,7 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:53.309780Z",
+     "iopub.status.busy": "2020-12-02T13:37:53.308920Z",
+     "iopub.status.idle": "2020-12-02T13:38:07.500784Z",
+     "shell.execute_reply": "2020-12-02T13:38:07.500230Z"
+    }
+   },
    "outputs": [],
    "source": [
     "sigma = 1 # kernel bandwidth\n",
@@ -135,7 +170,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:38:07.518414Z",
+     "iopub.status.busy": "2020-12-02T13:38:07.516727Z",
+     "iopub.status.idle": "2020-12-02T13:38:07.634239Z",
+     "shell.execute_reply": "2020-12-02T13:38:07.633014Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = np.real(kedmd_model.eigenvalues)\n",
@@ -153,7 +195,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:38:07.664425Z",
+     "iopub.status.busy": "2020-12-02T13:38:07.663884Z",
+     "iopub.status.idle": "2020-12-02T13:38:08.310075Z",
+     "shell.execute_reply": "2020-12-02T13:38:08.310511Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8, 8))\n",
@@ -186,7 +235,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:38:08.325497Z",
+     "iopub.status.busy": "2020-12-02T13:38:08.314654Z",
+     "iopub.status.idle": "2020-12-02T13:38:08.506300Z",
+     "shell.execute_reply": "2020-12-02T13:38:08.505827Z"
+    }
+   },
    "outputs": [],
    "source": [
     "kmeans = dt.clustering.Kmeans(n_clusters=4, n_jobs=4).fit(phi[:, :4]).fetch_model()\n",
