--- a/docs/source/notebooks/mlmsm.ipynb
+++ b/docs/source/notebooks/mlmsm.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "# Maximum-likelihood MSMs\n",
     "\n",
-    "This kind of estimator tries to determine the most likely transition matrix $P\\in\\mathbb{R}^{n\\times n}$ given the [transition counts](./transition-counting.ipynb) $C\\in\\mathbb{R}^{n\\times n}$. For those already familiar with the interface: The corresponding [API docs](../api/generated/deeptime.markov.msm.MaximumLikelihoodMSM.rst#deeptime.markov.msm.MaximumLikelihoodMSM).\n",
+    "For those already familiar with the interface: The corresponding [API docs](../api/generated/deeptime.markov.msm.MaximumLikelihoodMSM.rst#deeptime.markov.msm.MaximumLikelihoodMSM).\n",
+    "\n",
+    "This kind of estimator tries to determine the most likely transition matrix $P\\in\\mathbb{R}^{n\\times n}$ given the [transition counts](./transition-counting.ipynb) $C\\in\\mathbb{R}^{n\\times n}$ <cite data-cite=\"nbmlmsm-schutte1999direct\">(Schuette, 1999)</cite><cite data-cite=\"nbmlmsm-wu2020variational\">(Wu, 2020)</cite>.\n",
     "\n",
     "The likelihood that a transition matrix $P$ belongs to a trajectory $S = (s_0,\\ldots,s_T)$ is given by\n",
     "\n",
     "$$ \\mathcal{L}(P) = \\mathbb{P}(P\\mid S) = \\prod_{i,j=1}^n P_{ij}^{C_{ij}}. $$\n",
     "\n",
-    "After importing the package, such an estimator can be instantiated:"
+    "After importing the package, the estimator can be instantiated:"
    ]
   },
   {
@@ -20,10 +22,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:23.381443Z",
-     "iopub.status.busy": "2020-10-26T12:01:23.380918Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.131708Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.132037Z"
+     "iopub.execute_input": "2020-12-02T13:40:35.827209Z",
+     "iopub.status.busy": "2020-12-02T13:40:35.825649Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.735316Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.735667Z"
     }
    },
    "outputs": [],
@@ -60,10 +62,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.136973Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.136559Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.138159Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.138519Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.740413Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.739947Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.741444Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.741927Z"
     }
    },
    "outputs": [],
@@ -89,10 +91,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.146946Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.146535Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.149151Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.148587Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.746473Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.746019Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.752639Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.753095Z"
     }
    },
    "outputs": [],
@@ -112,10 +114,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.152224Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.151826Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.155446Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.155036Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.756662Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.756219Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.760045Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.759587Z"
     }
    },
    "outputs": [],
@@ -138,10 +140,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.160247Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.159834Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.161906Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.161539Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.765428Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.764872Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.767306Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.766777Z"
     }
    },
    "outputs": [],
@@ -161,10 +163,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.166128Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.165675Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.168158Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.167735Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.773435Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.772810Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.776827Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.777530Z"
     }
    },
    "outputs": [],
@@ -185,10 +187,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.172073Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.171656Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.174191Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.173765Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.783223Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.782731Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.785670Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.784925Z"
     }
    },
    "outputs": [],
@@ -201,10 +203,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.178308Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.177817Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.179701Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.180163Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.793240Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.792440Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.796483Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.795707Z"
     }
    },
    "outputs": [],
@@ -219,10 +221,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.184449Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.183950Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.186644Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.186166Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.801667Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.800213Z",
+     "iopub.status.idle": "2020-12-02T13:40:36.804934Z",
+     "shell.execute_reply": "2020-12-02T13:40:36.805488Z"
     }
    },
    "outputs": [],
@@ -243,10 +245,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.190192Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.189713Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.531812Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.531401Z"
+     "iopub.execute_input": "2020-12-02T13:40:36.810012Z",
+     "iopub.status.busy": "2020-12-02T13:40:36.809442Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.213506Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.213946Z"
     }
    },
    "outputs": [],
@@ -277,10 +279,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.535855Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.535442Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.537137Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.537521Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.217498Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.217043Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.219512Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.219051Z"
     }
    },
    "outputs": [],
@@ -305,10 +307,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.540500Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.540104Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.568628Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.568198Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.223078Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.222620Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.254622Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.254242Z"
     }
    },
    "outputs": [],
@@ -331,10 +333,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.573334Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.572793Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.588500Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.587786Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.259213Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.258798Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.273190Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.273551Z"
     }
    },
    "outputs": [],
@@ -354,10 +356,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.592346Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.591879Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.594922Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.594409Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.276581Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.276168Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.278554Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.278120Z"
     }
    },
    "outputs": [],
@@ -377,10 +379,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.599089Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.598441Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.695558Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.695097Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.287601Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.282406Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.381389Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.381716Z"
     }
    },
    "outputs": [],
@@ -402,10 +404,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.700036Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.699525Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.713162Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.713595Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.387223Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.386224Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.400456Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.399968Z"
     }
    },
    "outputs": [],
@@ -425,10 +427,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.737752Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.730686Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.865821Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.865197Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.415541Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.414841Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.563832Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.563434Z"
     }
    },
    "outputs": [],
@@ -452,10 +454,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:01:24.869602Z",
-     "iopub.status.busy": "2020-10-26T12:01:24.869121Z",
-     "iopub.status.idle": "2020-10-26T12:01:24.883101Z",
-     "shell.execute_reply": "2020-10-26T12:01:24.883478Z"
+     "iopub.execute_input": "2020-12-02T13:40:37.568607Z",
+     "iopub.status.busy": "2020-12-02T13:40:37.567912Z",
+     "iopub.status.idle": "2020-12-02T13:40:37.584612Z",
+     "shell.execute_reply": "2020-12-02T13:40:37.584188Z"
     }
    },
    "outputs": [],
