--- a/docs/source/notebooks/sindy.ipynb
+++ b/docs/source/notebooks/sindy.ipynb
@@ -139,6 +139,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.890481Z",
      "start_time": "2020-11-07T20:19:41.949574Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:37.231323Z",
+     "iopub.status.busy": "2020-12-02T13:37:37.228996Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.183460Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.182947Z"
     }
    },
    "outputs": [],
@@ -154,6 +160,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.896560Z",
      "start_time": "2020-11-07T20:19:42.892498Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.187212Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.186831Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.189113Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.188696Z"
     }
    },
    "outputs": [],
@@ -180,6 +192,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.907817Z",
      "start_time": "2020-11-07T20:19:42.898790Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.192410Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.191921Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.193835Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.194218Z"
     }
    },
    "outputs": [],
@@ -205,6 +223,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.926666Z",
      "start_time": "2020-11-07T20:19:42.910433Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.220290Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.219787Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.232613Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.233159Z"
     }
    },
    "outputs": [],
@@ -234,6 +258,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.934131Z",
      "start_time": "2020-11-07T20:19:42.928354Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.236795Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.236296Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.238665Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.238090Z"
     }
    },
    "outputs": [],
@@ -255,6 +285,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.947193Z",
      "start_time": "2020-11-07T20:19:42.935889Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.242262Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.241737Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.244176Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.244704Z"
     }
    },
    "outputs": [],
@@ -278,6 +314,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:42.968203Z",
      "start_time": "2020-11-07T20:19:42.950016Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.257995Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.257494Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.259040Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.259502Z"
     }
    },
    "outputs": [],
@@ -299,6 +341,12 @@
     "ExecuteTime": {
      "end_time": "2020-11-07T20:19:43.678787Z",
      "start_time": "2020-11-07T20:19:42.971663Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:37:38.263736Z",
+     "iopub.status.busy": "2020-12-02T13:37:38.263335Z",
+     "iopub.status.idle": "2020-12-02T13:37:38.680858Z",
+     "shell.execute_reply": "2020-12-02T13:37:38.680338Z"
     }
    },
    "outputs": [],
