--- a/docs/source/notebooks/tae.ipynb
+++ b/docs/source/notebooks/tae.ipynb
@@ -27,7 +27,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:03.110061Z",
+     "iopub.status.busy": "2020-12-02T13:43:03.108312Z",
+     "iopub.status.idle": "2020-12-02T13:43:04.005032Z",
+     "shell.execute_reply": "2020-12-02T13:43:04.004567Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import deeptime as dt\n",
@@ -44,7 +51,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:04.009270Z",
+     "iopub.status.busy": "2020-12-02T13:43:04.008746Z",
+     "iopub.status.idle": "2020-12-02T13:43:04.010366Z",
+     "shell.execute_reply": "2020-12-02T13:43:04.010757Z"
+    }
+   },
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\")\n",
@@ -62,7 +76,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:04.016797Z",
+     "iopub.status.busy": "2020-12-02T13:43:04.015236Z",
+     "iopub.status.idle": "2020-12-02T13:43:04.020773Z",
+     "shell.execute_reply": "2020-12-02T13:43:04.020358Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dtraj, traj = dt.data.sqrt_model(n_samples=10000)"
@@ -78,7 +99,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:04.026711Z",
+     "iopub.status.busy": "2020-12-02T13:43:04.026091Z",
+     "iopub.status.idle": "2020-12-02T13:43:06.581897Z",
+     "shell.execute_reply": "2020-12-02T13:43:06.581437Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -115,7 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:06.587341Z",
+     "iopub.status.busy": "2020-12-02T13:43:06.586749Z",
+     "iopub.status.idle": "2020-12-02T13:43:06.589377Z",
+     "shell.execute_reply": "2020-12-02T13:43:06.589790Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
@@ -141,7 +176,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:06.594168Z",
+     "iopub.status.busy": "2020-12-02T13:43:06.593561Z",
+     "iopub.status.idle": "2020-12-02T13:43:06.596485Z",
+     "shell.execute_reply": "2020-12-02T13:43:06.596067Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from deeptime.util.torch import MLP\n",
@@ -162,7 +204,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:06.600395Z",
+     "iopub.status.busy": "2020-12-02T13:43:06.599757Z",
+     "iopub.status.idle": "2020-12-02T13:43:29.276556Z",
+     "shell.execute_reply": "2020-12-02T13:43:29.277292Z"
+    }
+   },
    "outputs": [],
    "source": [
     "tae = dt.decomposition.TAE(encoder, decoder, learning_rate=1e-3)\n",
@@ -174,13 +223,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The loss can be visualized and it can be see, that our model does not overfit."
+    "The loss can be visualized and it can be seen, that our model does not overfit."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:29.281253Z",
+     "iopub.status.busy": "2020-12-02T13:43:29.280469Z",
+     "iopub.status.idle": "2020-12-02T13:43:29.761848Z",
+     "shell.execute_reply": "2020-12-02T13:43:29.762186Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.semilogy(*tae.train_losses.T, label='train')\n",
@@ -198,7 +254,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:29.766649Z",
+     "iopub.status.busy": "2020-12-02T13:43:29.765908Z",
+     "iopub.status.idle": "2020-12-02T13:43:29.944854Z",
+     "shell.execute_reply": "2020-12-02T13:43:29.945792Z"
+    }
+   },
    "outputs": [],
    "source": [
     "proj = tae_model.transform(traj)\n",
@@ -215,7 +278,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:29.952200Z",
+     "iopub.status.busy": "2020-12-02T13:43:29.950602Z",
+     "iopub.status.idle": "2020-12-02T13:43:30.289185Z",
+     "shell.execute_reply": "2020-12-02T13:43:30.289633Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cm = plt.scatter(*traj.T, c=proj, cmap='coolwarm')\n",
@@ -238,7 +308,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:30.293393Z",
+     "iopub.status.busy": "2020-12-02T13:43:30.292853Z",
+     "iopub.status.idle": "2020-12-02T13:43:30.297054Z",
+     "shell.execute_reply": "2020-12-02T13:43:30.296626Z"
+    }
+   },
    "outputs": [],
    "source": [
     "encoder = dt.decomposition.TVAEEncoder([2, 100, 100, 1], nonlinearity=torch.nn.ReLU)\n",
@@ -255,7 +332,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:30.300857Z",
+     "iopub.status.busy": "2020-12-02T13:43:30.300214Z",
+     "iopub.status.idle": "2020-12-02T13:43:30.302499Z",
+     "shell.execute_reply": "2020-12-02T13:43:30.302928Z"
+    }
+   },
    "outputs": [],
    "source": [
     "decoder = MLP([1, 100, 100, 2], nonlinearity=torch.nn.ReLU, initial_batchnorm=False)"
@@ -271,10 +355,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:43:30.306589Z",
+     "iopub.status.busy": "2020-12-02T13:43:30.306077Z",
+     "iopub.status.idle": "2020-12-02T13:44:05.555427Z",
+     "shell.execute_reply": "2020-12-02T13:44:05.556291Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "tvae = dt.decomposition.TVAE(encoder, decoder, learning_rate=1e-3)\n",
+    "tvae = dt.decomposition.TVAE(encoder, decoder, learning_rate=1e-2)\n",
     "tvae.fit(loader_train, n_epochs=30, validation_loader=loader_val)\n",
     "tvae_model = tvae.fetch_model()"
    ]
@@ -289,7 +380,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:05.559801Z",
+     "iopub.status.busy": "2020-12-02T13:44:05.559125Z",
+     "iopub.status.idle": "2020-12-02T13:44:05.919216Z",
+     "shell.execute_reply": "2020-12-02T13:44:05.918784Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.semilogy(*tvae.train_losses.T, label='train')\n",
@@ -307,7 +405,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-12-02T13:44:05.923712Z",
+     "iopub.status.busy": "2020-12-02T13:44:05.922949Z",
+     "iopub.status.idle": "2020-12-02T13:44:06.392494Z",
+     "shell.execute_reply": "2020-12-02T13:44:06.392075Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cm = plt.scatter(*traj.T, c=tvae_model.transform(traj), cmap='coolwarm')\n",
