--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "TICA <cite data-cite=\"nbtica-molgedey1994separation\">(Molgedey, 1994)</cite> is short for Time-lagged Independent Component Analysis (sometimes also time structure-based ICA) and is a linear transformation method that can be used for dimensionality reduction. It was introduced for molecular dynamics in <cite data-cite=\"nbtica-naritomi2011slow\">(Naritomi, 2011)</cite>, later <cite data-cite=\"nbtica-perez2013identification\">(Pérez-Hernández, 2013)</cite> and as a method in the pipeline of Markov model construction in <cite data-cite=\"nbtica-perez2013identification\">(Pérez-Hernández, 2013)</cite> and <cite data-cite=\"nbtica-schwantes2013improvements\">(Schwantes, 2013)</cite>.\n",
     "\n",
-    "TICA is algorithmically identical to extended dynamic mode decomposition (EDMD) <cite data-cite=\"nbtica-williams2015data\">(Williams, 2015)</cite>, which is in pracitice also used to analyze time series which are not in detailed balance, yielding complex-valued eigenfunctions.\n",
+    "TICA with featurized data is algorithmically identical to extended dynamic mode decomposition (EDMD) <cite data-cite=\"nbtica-williams2015data\">(Williams, 2015)</cite> (otherwise dynamic mode decomposition (DMD) <cite data-cite=\"nbtica-schmid2010dynamic\">(Schmidt, 2010)</cite>), which is in pracitice also used to analyze time series which are not in detailed balance, yielding complex-valued eigenfunctions.\n",
     "\n",
     "> The input for the TICA algorithm is a time-series dataset. Due to the linear nature of the method it can help, to first featurize the input data by passing it through nonlinear functions. This could be for example pairwise distances in case the input is based on molecular dynamics data.\n",
     "\n",
@@ -59,10 +59,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:13.876586Z",
-     "iopub.status.busy": "2020-10-26T12:13:13.874985Z",
-     "iopub.status.idle": "2020-10-26T12:13:14.592544Z",
-     "shell.execute_reply": "2020-10-26T12:13:14.592051Z"
+     "iopub.execute_input": "2020-12-02T13:46:13.715241Z",
+     "iopub.status.busy": "2020-12-02T13:46:13.712703Z",
+     "iopub.status.idle": "2020-12-02T13:46:14.592429Z",
+     "shell.execute_reply": "2020-12-02T13:46:14.592827Z"
     }
    },
    "outputs": [],
@@ -83,10 +83,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:14.595798Z",
-     "iopub.status.busy": "2020-10-26T12:13:14.595443Z",
-     "iopub.status.idle": "2020-10-26T12:13:14.597796Z",
-     "shell.execute_reply": "2020-10-26T12:13:14.597408Z"
+     "iopub.execute_input": "2020-12-02T13:46:14.595901Z",
+     "iopub.status.busy": "2020-12-02T13:46:14.595523Z",
+     "iopub.status.idle": "2020-12-02T13:46:14.598046Z",
+     "shell.execute_reply": "2020-12-02T13:46:14.598350Z"
     }
    },
    "outputs": [],
@@ -110,10 +110,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:14.601714Z",
-     "iopub.status.busy": "2020-10-26T12:13:14.600993Z",
-     "iopub.status.idle": "2020-10-26T12:13:14.611206Z",
-     "shell.execute_reply": "2020-10-26T12:13:14.611594Z"
+     "iopub.execute_input": "2020-12-02T13:46:14.601204Z",
+     "iopub.status.busy": "2020-12-02T13:46:14.600795Z",
+     "iopub.status.idle": "2020-12-02T13:46:14.612212Z",
+     "shell.execute_reply": "2020-12-02T13:46:14.611685Z"
     }
    },
    "outputs": [],
@@ -134,10 +134,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:14.615245Z",
-     "iopub.status.busy": "2020-10-26T12:13:14.614648Z",
-     "iopub.status.idle": "2020-10-26T12:13:14.619101Z",
-     "shell.execute_reply": "2020-10-26T12:13:14.618710Z"
+     "iopub.execute_input": "2020-12-02T13:46:14.615548Z",
+     "iopub.status.busy": "2020-12-02T13:46:14.614917Z",
+     "iopub.status.idle": "2020-12-02T13:46:14.619035Z",
+     "shell.execute_reply": "2020-12-02T13:46:14.619457Z"
     }
    },
    "outputs": [],
@@ -159,10 +159,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:14.622929Z",
-     "iopub.status.busy": "2020-10-26T12:13:14.622433Z",
-     "iopub.status.idle": "2020-10-26T12:13:14.625082Z",
-     "shell.execute_reply": "2020-10-26T12:13:14.624689Z"
+     "iopub.execute_input": "2020-12-02T13:46:14.622955Z",
+     "iopub.status.busy": "2020-12-02T13:46:14.622532Z",
+     "iopub.status.idle": "2020-12-02T13:46:14.624855Z",
+     "shell.execute_reply": "2020-12-02T13:46:14.625259Z"
     }
    },
    "outputs": [],
@@ -198,7 +198,7 @@
     "$$\n",
     "we have a probability $P_{11} = 97\\%$ to stay in state \"0\" and a $P_{12} = 3\\%$ to transition from state \"0\" to state \"1\" and vice versa. \n",
     "\n",
-    "We map the state sequence into ellipsoidal shapes in 2-dimensional space. For more details, please see the example data's [documentation](../api/generated/impl/deeptime.data.ellipsoids_dataset.Ellipsoids.rst#deeptime.data.ellipsoids_dataset.Ellipsoids)."
+    "We map the state sequence into ellipsoidal shapes in 2-dimensional space. For more details, please see the example data's [documentation](../api/generated/deeptime.data.ellipsoids.rst#deeptime.data.ellipsoids)."
    ]
   },
   {
@@ -206,10 +206,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:14.630107Z",
-     "iopub.status.busy": "2020-10-26T12:13:14.629298Z",
-     "iopub.status.idle": "2020-10-26T12:13:14.633164Z",
-     "shell.execute_reply": "2020-10-26T12:13:14.633554Z"
+     "iopub.execute_input": "2020-12-02T13:46:14.631210Z",
+     "iopub.status.busy": "2020-12-02T13:46:14.629361Z",
+     "iopub.status.idle": "2020-12-02T13:46:14.635351Z",
+     "shell.execute_reply": "2020-12-02T13:46:14.634809Z"
     }
    },
    "outputs": [],
@@ -236,10 +236,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:14.639919Z",
-     "iopub.status.busy": "2020-10-26T12:13:14.639264Z",
-     "iopub.status.idle": "2020-10-26T12:13:15.684225Z",
-     "shell.execute_reply": "2020-10-26T12:13:15.683816Z"
+     "iopub.execute_input": "2020-12-02T13:46:14.642726Z",
+     "iopub.status.busy": "2020-12-02T13:46:14.642205Z",
+     "iopub.status.idle": "2020-12-02T13:46:15.809133Z",
+     "shell.execute_reply": "2020-12-02T13:46:15.809542Z"
     }
    },
    "outputs": [],
@@ -289,10 +289,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:15.689736Z",
-     "iopub.status.busy": "2020-10-26T12:13:15.689345Z",
-     "iopub.status.idle": "2020-10-26T12:13:15.904752Z",
-     "shell.execute_reply": "2020-10-26T12:13:15.904330Z"
+     "iopub.execute_input": "2020-12-02T13:46:15.815604Z",
+     "iopub.status.busy": "2020-12-02T13:46:15.815175Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.057260Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.056824Z"
     }
    },
    "outputs": [],
@@ -340,10 +340,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:15.907919Z",
-     "iopub.status.busy": "2020-10-26T12:13:15.907531Z",
-     "iopub.status.idle": "2020-10-26T12:13:15.909875Z",
-     "shell.execute_reply": "2020-10-26T12:13:15.909470Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.060339Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.059890Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.062333Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.062881Z"
     }
    },
    "outputs": [],
@@ -368,10 +368,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:15.913250Z",
-     "iopub.status.busy": "2020-10-26T12:13:15.912811Z",
-     "iopub.status.idle": "2020-10-26T12:13:15.916010Z",
-     "shell.execute_reply": "2020-10-26T12:13:15.915518Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.068784Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.068214Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.071832Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.072441Z"
     }
    },
    "outputs": [],
@@ -391,10 +391,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:15.931323Z",
-     "iopub.status.busy": "2020-10-26T12:13:15.930526Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.127803Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.127394Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.092801Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.092256Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.332192Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.331839Z"
     }
    },
    "outputs": [],
@@ -432,10 +432,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.131284Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.130755Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.133747Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.133347Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.335910Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.335337Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.337606Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.338128Z"
     }
    },
    "outputs": [],
@@ -465,10 +465,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.137298Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.136763Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.139914Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.139518Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.342814Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.342367Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.344590Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.345049Z"
     }
    },
    "outputs": [],
@@ -509,10 +509,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.143114Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.142722Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.145193Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.145499Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.348505Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.348068Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.351456Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.352007Z"
     }
    },
    "outputs": [],
@@ -533,10 +533,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.149020Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.148159Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.151053Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.150654Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.355752Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.355211Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.358656Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.358106Z"
     }
    },
    "outputs": [],
@@ -557,10 +557,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.154215Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.153781Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.156236Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.156540Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.362480Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.361882Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.365364Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.364816Z"
     }
    },
    "outputs": [],
@@ -581,10 +581,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.170175Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.169724Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.309102Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.308698Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.431882Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.431132Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.592327Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.592728Z"
     }
    },
    "outputs": [],
@@ -615,10 +615,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.312188Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.311816Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.313686Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.313983Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.596325Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.595942Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.598119Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.597729Z"
     }
    },
    "outputs": [],
@@ -638,10 +638,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.317160Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.316693Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.319239Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.318863Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.602398Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.601837Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.604187Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.604615Z"
     }
    },
    "outputs": [],
@@ -662,10 +662,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.322264Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.321875Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.324465Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.324862Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.607785Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.607164Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.610956Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.610416Z"
     }
    },
    "outputs": [],
@@ -686,10 +686,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:16.404027Z",
-     "iopub.status.busy": "2020-10-26T12:13:16.389777Z",
-     "iopub.status.idle": "2020-10-26T12:13:16.586601Z",
-     "shell.execute_reply": "2020-10-26T12:13:16.586207Z"
+     "iopub.execute_input": "2020-12-02T13:46:16.625781Z",
+     "iopub.status.busy": "2020-12-02T13:46:16.625181Z",
+     "iopub.status.idle": "2020-12-02T13:46:16.840222Z",
+     "shell.execute_reply": "2020-12-02T13:46:16.840583Z"
     }
    },
    "outputs": [],
@@ -731,6 +731,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
