--- a/docs/source/notebooks/tpt.ipynb
+++ b/docs/source/notebooks/tpt.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Transition path theory\n",
     "\n",
-    "Transition path theory (TPT) is a method to study the ensemble of reactive trajectories, i.e., trajectories which come from a defined set of states $A$ and go next to $B$. It can answer at which rate they occur, as well as depict parallel pathways, traps, sequences of events, etc. Furthermore it introduces the notion of 'committor functions', which deals with probabilities of ending up in set $A$ or $B$ given the trajectory starts at some state potentially outside $A\\cup B$.\n",
+    "Transition path theory (TPT)<cite data-cite=\"nbtpt-weinan2006towards\">(E, 2006)</cite><cite data-cite=\"nbtpt-metzner2009transition\">(Metzner, 2009)</cite> is a method to study the ensemble of reactive trajectories, i.e., trajectories which come from a defined set of states $A$ and go next to $B$. It can answer at which rate they occur, as well as depict parallel pathways, traps, sequences of events, etc. Furthermore it introduces the notion of 'committor functions', which deals with probabilities of ending up in set $A$ or $B$ given the trajectory starts at some state potentially outside $A\\cup B$.\n",
     "\n",
-    "A mathematical description of TPT can be found in <cite data-cite=\"nbtpt-weinan2006towards\">(E, 2006) and </cite><cite data-cite=\"nbtpt-metzner2009transition\">(Metzner, 2009)</cite>. The implementation is based on <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite>. Coarse-graining by path decomposition is presented in <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite> and <cite data-cite=\"nbtpt-berezhkovskii2009reactive\">(Berezhokovskii, 2009)</cite>.\n",
+    "The implementation is based on <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite>. Coarse-graining by path decomposition is presented in <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite> and <cite data-cite=\"nbtpt-berezhkovskii2009reactive\">(Berezhokovskii, 2009)</cite>.\n",
     "    \n",
     "To demonstrate the TPT API ([API docs here](../api/generated/deeptime.markov.ReactiveFlux.rst#deeptime.markov.ReactiveFlux)), in the following the example of a drunkard's walk is presented. The example is motivated by <cite data-cite=\"nbtpt-doyle1984random\">(Doyle, 1984)</cite> and <cite data-cite=\"nbtpt-valleriani2015circular\">(Valleriani, 2015)</cite>, where a drunkard is placed on a network of states and two special states, home and the bar. When the drunkard reaches either of these special states the trajectory stays there with high probability.\n",
     "One can then ask which paths can be taken and also with which probability the drunkard is going to reach either of the states given a certain current position."
@@ -26,10 +26,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:29.356870Z",
-     "iopub.status.busy": "2020-11-04T13:27:29.354295Z",
-     "iopub.status.idle": "2020-11-04T13:27:30.217534Z",
-     "shell.execute_reply": "2020-11-04T13:27:30.216758Z"
+     "iopub.execute_input": "2020-12-02T13:42:43.247050Z",
+     "iopub.status.busy": "2020-12-02T13:42:43.245263Z",
+     "iopub.status.idle": "2020-12-02T13:42:44.102819Z",
+     "shell.execute_reply": "2020-12-02T13:42:44.102314Z"
     }
    },
    "outputs": [],
@@ -56,10 +56,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:30.222028Z",
-     "iopub.status.busy": "2020-11-04T13:27:30.221594Z",
-     "iopub.status.idle": "2020-11-04T13:27:30.228506Z",
-     "shell.execute_reply": "2020-11-04T13:27:30.228853Z"
+     "iopub.execute_input": "2020-12-02T13:42:44.110705Z",
+     "iopub.status.busy": "2020-12-02T13:42:44.106553Z",
+     "iopub.status.idle": "2020-12-02T13:42:44.112162Z",
+     "shell.execute_reply": "2020-12-02T13:42:44.112564Z"
     }
    },
    "outputs": [],
@@ -87,10 +87,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:30.238534Z",
-     "iopub.status.busy": "2020-11-04T13:27:30.238073Z",
-     "iopub.status.idle": "2020-11-04T13:27:30.272535Z",
-     "shell.execute_reply": "2020-11-04T13:27:30.272084Z"
+     "iopub.execute_input": "2020-12-02T13:42:44.132129Z",
+     "iopub.status.busy": "2020-12-02T13:42:44.131508Z",
+     "iopub.status.idle": "2020-12-02T13:42:44.151698Z",
+     "shell.execute_reply": "2020-12-02T13:42:44.150542Z"
     }
    },
    "outputs": [],
@@ -119,10 +119,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:30.277409Z",
-     "iopub.status.busy": "2020-11-04T13:27:30.276979Z",
-     "iopub.status.idle": "2020-11-04T13:27:30.279646Z",
-     "shell.execute_reply": "2020-11-04T13:27:30.279187Z"
+     "iopub.execute_input": "2020-12-02T13:42:44.157748Z",
+     "iopub.status.busy": "2020-12-02T13:42:44.157292Z",
+     "iopub.status.idle": "2020-12-02T13:42:44.159774Z",
+     "shell.execute_reply": "2020-12-02T13:42:44.160216Z"
     }
    },
    "outputs": [],
@@ -144,10 +144,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:30.285633Z",
-     "iopub.status.busy": "2020-11-04T13:27:30.284787Z",
-     "iopub.status.idle": "2020-11-04T13:27:31.518123Z",
-     "shell.execute_reply": "2020-11-04T13:27:31.518680Z"
+     "iopub.execute_input": "2020-12-02T13:42:44.164475Z",
+     "iopub.status.busy": "2020-12-02T13:42:44.164009Z",
+     "iopub.status.idle": "2020-12-02T13:42:45.329318Z",
+     "shell.execute_reply": "2020-12-02T13:42:45.328631Z"
     }
    },
    "outputs": [],
@@ -178,10 +178,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:31.522823Z",
-     "iopub.status.busy": "2020-11-04T13:27:31.522135Z",
-     "iopub.status.idle": "2020-11-04T13:27:31.531376Z",
-     "shell.execute_reply": "2020-11-04T13:27:31.531000Z"
+     "iopub.execute_input": "2020-12-02T13:42:45.332833Z",
+     "iopub.status.busy": "2020-12-02T13:42:45.332445Z",
+     "iopub.status.idle": "2020-12-02T13:42:45.344839Z",
+     "shell.execute_reply": "2020-12-02T13:42:45.344336Z"
     }
    },
    "outputs": [],
@@ -260,10 +260,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:31.582189Z",
-     "iopub.status.busy": "2020-11-04T13:27:31.566440Z",
-     "iopub.status.idle": "2020-11-04T13:27:32.468742Z",
-     "shell.execute_reply": "2020-11-04T13:27:32.468165Z"
+     "iopub.execute_input": "2020-12-02T13:42:45.351702Z",
+     "iopub.status.busy": "2020-12-02T13:42:45.351178Z",
+     "iopub.status.idle": "2020-12-02T13:42:46.292787Z",
+     "shell.execute_reply": "2020-12-02T13:42:46.293183Z"
     }
    },
    "outputs": [],
@@ -345,10 +345,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:32.472860Z",
-     "iopub.status.busy": "2020-11-04T13:27:32.472419Z",
-     "iopub.status.idle": "2020-11-04T13:27:32.475165Z",
-     "shell.execute_reply": "2020-11-04T13:27:32.474684Z"
+     "iopub.execute_input": "2020-12-02T13:42:46.296841Z",
+     "iopub.status.busy": "2020-12-02T13:42:46.296412Z",
+     "iopub.status.idle": "2020-12-02T13:42:46.298574Z",
+     "shell.execute_reply": "2020-12-02T13:42:46.298965Z"
     }
    },
    "outputs": [],
@@ -368,10 +368,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:32.558223Z",
-     "iopub.status.busy": "2020-11-04T13:27:32.555826Z",
-     "iopub.status.idle": "2020-11-04T13:27:37.387447Z",
-     "shell.execute_reply": "2020-11-04T13:27:37.387978Z"
+     "iopub.execute_input": "2020-12-02T13:42:46.316098Z",
+     "iopub.status.busy": "2020-12-02T13:42:46.315589Z",
+     "iopub.status.idle": "2020-12-02T13:42:50.651757Z",
+     "shell.execute_reply": "2020-12-02T13:42:50.652209Z"
     }
    },
    "outputs": [],
@@ -418,10 +418,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:37.392966Z",
-     "iopub.status.busy": "2020-11-04T13:27:37.392542Z",
-     "iopub.status.idle": "2020-11-04T13:27:37.395008Z",
-     "shell.execute_reply": "2020-11-04T13:27:37.394587Z"
+     "iopub.execute_input": "2020-12-02T13:42:50.655506Z",
+     "iopub.status.busy": "2020-12-02T13:42:50.655059Z",
+     "iopub.status.idle": "2020-12-02T13:42:50.657713Z",
+     "shell.execute_reply": "2020-12-02T13:42:50.657275Z"
     }
    },
    "outputs": [],
@@ -445,10 +445,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:37.398529Z",
-     "iopub.status.busy": "2020-11-04T13:27:37.398085Z",
-     "iopub.status.idle": "2020-11-04T13:27:37.400615Z",
-     "shell.execute_reply": "2020-11-04T13:27:37.400182Z"
+     "iopub.execute_input": "2020-12-02T13:42:50.661538Z",
+     "iopub.status.busy": "2020-12-02T13:42:50.661130Z",
+     "iopub.status.idle": "2020-12-02T13:42:50.663650Z",
+     "shell.execute_reply": "2020-12-02T13:42:50.663263Z"
     }
    },
    "outputs": [],
@@ -468,10 +468,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:37.403608Z",
-     "iopub.status.busy": "2020-11-04T13:27:37.403183Z",
-     "iopub.status.idle": "2020-11-04T13:27:37.405896Z",
-     "shell.execute_reply": "2020-11-04T13:27:37.405308Z"
+     "iopub.execute_input": "2020-12-02T13:42:50.666788Z",
+     "iopub.status.busy": "2020-12-02T13:42:50.666325Z",
+     "iopub.status.idle": "2020-12-02T13:42:50.669271Z",
+     "shell.execute_reply": "2020-12-02T13:42:50.668820Z"
     }
    },
    "outputs": [],
@@ -495,10 +495,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:37.410935Z",
-     "iopub.status.busy": "2020-11-04T13:27:37.410472Z",
-     "iopub.status.idle": "2020-11-04T13:27:38.466977Z",
-     "shell.execute_reply": "2020-11-04T13:27:38.467297Z"
+     "iopub.execute_input": "2020-12-02T13:42:50.672487Z",
+     "iopub.status.busy": "2020-12-02T13:42:50.671968Z",
+     "iopub.status.idle": "2020-12-02T13:42:51.619336Z",
+     "shell.execute_reply": "2020-12-02T13:42:51.618801Z"
     }
    },
    "outputs": [],
@@ -518,10 +518,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:38.527708Z",
-     "iopub.status.busy": "2020-11-04T13:27:38.519546Z",
-     "iopub.status.idle": "2020-11-04T13:27:39.728417Z",
-     "shell.execute_reply": "2020-11-04T13:27:39.728743Z"
+     "iopub.execute_input": "2020-12-02T13:42:51.633984Z",
+     "iopub.status.busy": "2020-12-02T13:42:51.633461Z",
+     "iopub.status.idle": "2020-12-02T13:42:52.777543Z",
+     "shell.execute_reply": "2020-12-02T13:42:52.777944Z"
     }
    },
    "outputs": [],
@@ -550,10 +550,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:39.732889Z",
-     "iopub.status.busy": "2020-11-04T13:27:39.732480Z",
-     "iopub.status.idle": "2020-11-04T13:27:39.734447Z",
-     "shell.execute_reply": "2020-11-04T13:27:39.734022Z"
+     "iopub.execute_input": "2020-12-02T13:42:52.782080Z",
+     "iopub.status.busy": "2020-12-02T13:42:52.781643Z",
+     "iopub.status.idle": "2020-12-02T13:42:52.784013Z",
+     "shell.execute_reply": "2020-12-02T13:42:52.783562Z"
     }
    },
    "outputs": [],
@@ -575,10 +575,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:39.737903Z",
-     "iopub.status.busy": "2020-11-04T13:27:39.737510Z",
-     "iopub.status.idle": "2020-11-04T13:27:39.739363Z",
-     "shell.execute_reply": "2020-11-04T13:27:39.739779Z"
+     "iopub.execute_input": "2020-12-02T13:42:52.787338Z",
+     "iopub.status.busy": "2020-12-02T13:42:52.786831Z",
+     "iopub.status.idle": "2020-12-02T13:42:52.788643Z",
+     "shell.execute_reply": "2020-12-02T13:42:52.789052Z"
     }
    },
    "outputs": [],
@@ -598,10 +598,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:39.773935Z",
-     "iopub.status.busy": "2020-11-04T13:27:39.767767Z",
-     "iopub.status.idle": "2020-11-04T13:27:39.899901Z",
-     "shell.execute_reply": "2020-11-04T13:27:39.899534Z"
+     "iopub.execute_input": "2020-12-02T13:42:52.794408Z",
+     "iopub.status.busy": "2020-12-02T13:42:52.793847Z",
+     "iopub.status.idle": "2020-12-02T13:42:52.927863Z",
+     "shell.execute_reply": "2020-12-02T13:42:52.927206Z"
     }
    },
    "outputs": [],
@@ -633,10 +633,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:39.933291Z",
-     "iopub.status.busy": "2020-11-04T13:27:39.932867Z",
-     "iopub.status.idle": "2020-11-04T13:27:40.198533Z",
-     "shell.execute_reply": "2020-11-04T13:27:40.198056Z"
+     "iopub.execute_input": "2020-12-02T13:42:52.946542Z",
+     "iopub.status.busy": "2020-12-02T13:42:52.946120Z",
+     "iopub.status.idle": "2020-12-02T13:42:53.202959Z",
+     "shell.execute_reply": "2020-12-02T13:42:53.203343Z"
     }
    },
    "outputs": [],
@@ -698,10 +698,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:40.201658Z",
-     "iopub.status.busy": "2020-11-04T13:27:40.201182Z",
-     "iopub.status.idle": "2020-11-04T13:27:40.444489Z",
-     "shell.execute_reply": "2020-11-04T13:27:40.444991Z"
+     "iopub.execute_input": "2020-12-02T13:42:53.207899Z",
+     "iopub.status.busy": "2020-12-02T13:42:53.206504Z",
+     "iopub.status.idle": "2020-12-02T13:42:53.421906Z",
+     "shell.execute_reply": "2020-12-02T13:42:53.422343Z"
     }
    },
    "outputs": [],
@@ -722,10 +722,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:40.474871Z",
-     "iopub.status.busy": "2020-11-04T13:27:40.473861Z",
-     "iopub.status.idle": "2020-11-04T13:27:41.469643Z",
-     "shell.execute_reply": "2020-11-04T13:27:41.469951Z"
+     "iopub.execute_input": "2020-12-02T13:42:53.437147Z",
+     "iopub.status.busy": "2020-12-02T13:42:53.436360Z",
+     "iopub.status.idle": "2020-12-02T13:42:54.378618Z",
+     "shell.execute_reply": "2020-12-02T13:42:54.379029Z"
     }
    },
    "outputs": [],
@@ -762,10 +762,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:41.553953Z",
-     "iopub.status.busy": "2020-11-04T13:27:41.512286Z",
-     "iopub.status.idle": "2020-11-04T13:27:42.711066Z",
-     "shell.execute_reply": "2020-11-04T13:27:42.711487Z"
+     "iopub.execute_input": "2020-12-02T13:42:54.424510Z",
+     "iopub.status.busy": "2020-12-02T13:42:54.386349Z",
+     "iopub.status.idle": "2020-12-02T13:42:55.663245Z",
+     "shell.execute_reply": "2020-12-02T13:42:55.662803Z"
     }
    },
    "outputs": [],
@@ -787,10 +787,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:42.717577Z",
-     "iopub.status.busy": "2020-11-04T13:27:42.717176Z",
-     "iopub.status.idle": "2020-11-04T13:27:42.767965Z",
-     "shell.execute_reply": "2020-11-04T13:27:42.767473Z"
+     "iopub.execute_input": "2020-12-02T13:42:55.670528Z",
+     "iopub.status.busy": "2020-12-02T13:42:55.669935Z",
+     "iopub.status.idle": "2020-12-02T13:42:55.717379Z",
+     "shell.execute_reply": "2020-12-02T13:42:55.716948Z"
     }
    },
    "outputs": [],
@@ -805,10 +805,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:42.771097Z",
-     "iopub.status.busy": "2020-11-04T13:27:42.770644Z",
-     "iopub.status.idle": "2020-11-04T13:27:42.772814Z",
-     "shell.execute_reply": "2020-11-04T13:27:42.773297Z"
+     "iopub.execute_input": "2020-12-02T13:42:55.720454Z",
+     "iopub.status.busy": "2020-12-02T13:42:55.720006Z",
+     "iopub.status.idle": "2020-12-02T13:42:55.722905Z",
+     "shell.execute_reply": "2020-12-02T13:42:55.722500Z"
     }
    },
    "outputs": [],
@@ -829,10 +829,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:42.777625Z",
-     "iopub.status.busy": "2020-11-04T13:27:42.776653Z",
-     "iopub.status.idle": "2020-11-04T13:27:42.866053Z",
-     "shell.execute_reply": "2020-11-04T13:27:42.865562Z"
+     "iopub.execute_input": "2020-12-02T13:42:55.725678Z",
+     "iopub.status.busy": "2020-12-02T13:42:55.725277Z",
+     "iopub.status.idle": "2020-12-02T13:42:55.807253Z",
+     "shell.execute_reply": "2020-12-02T13:42:55.807645Z"
     }
    },
    "outputs": [],
@@ -852,10 +852,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:42.869788Z",
-     "iopub.status.busy": "2020-11-04T13:27:42.869161Z",
-     "iopub.status.idle": "2020-11-04T13:27:42.871904Z",
-     "shell.execute_reply": "2020-11-04T13:27:42.871490Z"
+     "iopub.execute_input": "2020-12-02T13:42:55.811351Z",
+     "iopub.status.busy": "2020-12-02T13:42:55.810833Z",
+     "iopub.status.idle": "2020-12-02T13:42:55.813201Z",
+     "shell.execute_reply": "2020-12-02T13:42:55.813560Z"
     }
    },
    "outputs": [],
@@ -876,10 +876,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:42.875361Z",
-     "iopub.status.busy": "2020-11-04T13:27:42.874744Z",
-     "iopub.status.idle": "2020-11-04T13:27:42.880226Z",
-     "shell.execute_reply": "2020-11-04T13:27:42.880677Z"
+     "iopub.execute_input": "2020-12-02T13:42:55.816963Z",
+     "iopub.status.busy": "2020-12-02T13:42:55.816574Z",
+     "iopub.status.idle": "2020-12-02T13:42:55.825161Z",
+     "shell.execute_reply": "2020-12-02T13:42:55.824283Z"
     }
    },
    "outputs": [],
@@ -901,10 +901,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-11-04T13:27:42.887310Z",
-     "iopub.status.busy": "2020-11-04T13:27:42.886463Z",
-     "iopub.status.idle": "2020-11-04T13:27:43.973182Z",
-     "shell.execute_reply": "2020-11-04T13:27:43.973601Z"
+     "iopub.execute_input": "2020-12-02T13:42:55.832224Z",
+     "iopub.status.busy": "2020-12-02T13:42:55.831777Z",
+     "iopub.status.idle": "2020-12-02T13:42:56.869009Z",
+     "shell.execute_reply": "2020-12-02T13:42:56.869476Z"
     }
    },
    "outputs": [],
