--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -618,3 +618,13 @@
   year={1966},
   publisher={Springer}
 }
+@article{schutte1999direct,
+  title={A direct approach to conformational dynamics based on hybrid Monte Carlo},
+  author={Sch{\"u}tte, Ch and Fischer, Alexander and Huisinga, Wilhelm and Deuflhard, Peter},
+  journal={Journal of Computational Physics},
+  volume={151},
+  number={1},
+  pages={146--168},
+  year={1999},
+  publisher={Elsevier}
+}
