--- a/docs/source/notebooks/pcca.ipynb
+++ b/docs/source/notebooks/pcca.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Coarse-graining with PCCA+\n",
     "\n",
-    "Robust Perron Cluster Analysis (PCCA+) <cite data-cite=\"nbpcca-roblitz2013fuzzy\">(Röblitz, 2013)</cite> is a successor the method PCCA in <cite data-cite=\"nbpcca-deuflhard2000identification\">(Deuflhard, 2000)</cite>, a spectral clustering algorithm which crisply assigns microstates to clusters. The assignments in PCCA are based on signs of components of eigenvectors, which behaves instably if they are close to zero. That behavior lead to the development of PCCA+, which uses fuzzy assignments rather than crisp ones. Given a [Markov state model](../index_msm.rst) with transition matrix $P\\in\\mathbb{R}^{n\\times n}$, PCCA+ can cluster together (sometimes also referred to as coarse-grain) the $n$ *micro*states into $m<n$ *metastable sets* of states between which also a transition matrix \n",
+    "Robust Perron Cluster Cluster Analysis (PCCA+) <cite data-cite=\"nbpcca-roblitz2013fuzzy\">(Röblitz, 2013)</cite> is a successor the method PCCA in <cite data-cite=\"nbpcca-deuflhard2000identification\">(Deuflhard, 2000)</cite>, a spectral clustering algorithm which crisply assigns microstates to clusters. The assignments in PCCA are based on signs of components of eigenvectors, which behaves instably if they are close to zero. That behavior lead to the development of PCCA+, which uses fuzzy assignments rather than crisp ones. Given a [Markov state model](../index_msm.rst) with transition matrix $P\\in\\mathbb{R}^{n\\times n}$, PCCA+ can cluster together (sometimes also referred to as coarse-grain) the $n$ *micro*states into $m<n$ *metastable sets* of states between which also a transition matrix \n",
     "\n",
     "$$ P_\\mathrm{macro}\\in\\mathbb{R}^{m\\times m} $$\n",
     "\n",
@@ -30,10 +30,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:18.696441Z",
-     "iopub.status.busy": "2020-10-26T12:13:18.694592Z",
-     "iopub.status.idle": "2020-10-26T12:13:19.421500Z",
-     "shell.execute_reply": "2020-10-26T12:13:19.420986Z"
+     "iopub.execute_input": "2020-12-02T13:46:19.853850Z",
+     "iopub.status.busy": "2020-12-02T13:46:19.847230Z",
+     "iopub.status.idle": "2020-12-02T13:46:20.724322Z",
+     "shell.execute_reply": "2020-12-02T13:46:20.723767Z"
     }
    },
    "outputs": [],
@@ -56,10 +56,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:19.425999Z",
-     "iopub.status.busy": "2020-10-26T12:13:19.425361Z",
-     "iopub.status.idle": "2020-10-26T12:13:19.734507Z",
-     "shell.execute_reply": "2020-10-26T12:13:19.734104Z"
+     "iopub.execute_input": "2020-12-02T13:46:20.727920Z",
+     "iopub.status.busy": "2020-12-02T13:46:20.727482Z",
+     "iopub.status.idle": "2020-12-02T13:46:21.064027Z",
+     "shell.execute_reply": "2020-12-02T13:46:21.063628Z"
     }
    },
    "outputs": [],
@@ -83,10 +83,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:19.801273Z",
-     "iopub.status.busy": "2020-10-26T12:13:19.800871Z",
-     "iopub.status.idle": "2020-10-26T12:13:19.803183Z",
-     "shell.execute_reply": "2020-10-26T12:13:19.802726Z"
+     "iopub.execute_input": "2020-12-02T13:46:21.154689Z",
+     "iopub.status.busy": "2020-12-02T13:46:21.066516Z",
+     "iopub.status.idle": "2020-12-02T13:46:21.157326Z",
+     "shell.execute_reply": "2020-12-02T13:46:21.156824Z"
     }
    },
    "outputs": [],
@@ -101,10 +101,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:19.822071Z",
-     "iopub.status.busy": "2020-10-26T12:13:19.821423Z",
-     "iopub.status.idle": "2020-10-26T12:13:20.182456Z",
-     "shell.execute_reply": "2020-10-26T12:13:20.182057Z"
+     "iopub.execute_input": "2020-12-02T13:46:21.173354Z",
+     "iopub.status.busy": "2020-12-02T13:46:21.172885Z",
+     "iopub.status.idle": "2020-12-02T13:46:21.576882Z",
+     "shell.execute_reply": "2020-12-02T13:46:21.576429Z"
     }
    },
    "outputs": [],
@@ -130,10 +130,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:20.186170Z",
-     "iopub.status.busy": "2020-10-26T12:13:20.185481Z",
-     "iopub.status.idle": "2020-10-26T12:13:20.191894Z",
-     "shell.execute_reply": "2020-10-26T12:13:20.192283Z"
+     "iopub.execute_input": "2020-12-02T13:46:21.581140Z",
+     "iopub.status.busy": "2020-12-02T13:46:21.580713Z",
+     "iopub.status.idle": "2020-12-02T13:46:21.588276Z",
+     "shell.execute_reply": "2020-12-02T13:46:21.587879Z"
     }
    },
    "outputs": [],
@@ -156,10 +156,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:20.197985Z",
-     "iopub.status.busy": "2020-10-26T12:13:20.197323Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.139102Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.139604Z"
+     "iopub.execute_input": "2020-12-02T13:46:21.593634Z",
+     "iopub.status.busy": "2020-12-02T13:46:21.593221Z",
+     "iopub.status.idle": "2020-12-02T13:46:28.615649Z",
+     "shell.execute_reply": "2020-12-02T13:46:28.616052Z"
     }
    },
    "outputs": [],
@@ -199,10 +199,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.143242Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.142681Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.151974Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.151571Z"
+     "iopub.execute_input": "2020-12-02T13:46:28.619506Z",
+     "iopub.status.busy": "2020-12-02T13:46:28.619125Z",
+     "iopub.status.idle": "2020-12-02T13:46:28.630224Z",
+     "shell.execute_reply": "2020-12-02T13:46:28.629605Z"
     }
    },
    "outputs": [],
@@ -222,10 +222,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.156120Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.155522Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.158383Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.158009Z"
+     "iopub.execute_input": "2020-12-02T13:46:28.634107Z",
+     "iopub.status.busy": "2020-12-02T13:46:28.633592Z",
+     "iopub.status.idle": "2020-12-02T13:46:28.636296Z",
+     "shell.execute_reply": "2020-12-02T13:46:28.635881Z"
     }
    },
    "outputs": [],
@@ -245,10 +245,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.161365Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.160964Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.163516Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.163126Z"
+     "iopub.execute_input": "2020-12-02T13:46:28.639169Z",
+     "iopub.status.busy": "2020-12-02T13:46:28.638754Z",
+     "iopub.status.idle": "2020-12-02T13:46:28.641128Z",
+     "shell.execute_reply": "2020-12-02T13:46:28.640701Z"
     }
    },
    "outputs": [],
@@ -261,10 +261,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.180325Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.178335Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.594789Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.594396Z"
+     "iopub.execute_input": "2020-12-02T13:46:28.650372Z",
+     "iopub.status.busy": "2020-12-02T13:46:28.649702Z",
+     "iopub.status.idle": "2020-12-02T13:46:29.061916Z",
+     "shell.execute_reply": "2020-12-02T13:46:29.062295Z"
     }
    },
    "outputs": [],
@@ -294,10 +294,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.598225Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.597699Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.600832Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.600433Z"
+     "iopub.execute_input": "2020-12-02T13:46:29.065769Z",
+     "iopub.status.busy": "2020-12-02T13:46:29.065284Z",
+     "iopub.status.idle": "2020-12-02T13:46:29.067324Z",
+     "shell.execute_reply": "2020-12-02T13:46:29.067642Z"
     }
    },
    "outputs": [],
@@ -317,10 +317,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.603932Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.603500Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.605796Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.605377Z"
+     "iopub.execute_input": "2020-12-02T13:46:29.071422Z",
+     "iopub.status.busy": "2020-12-02T13:46:29.070842Z",
+     "iopub.status.idle": "2020-12-02T13:46:29.073674Z",
+     "shell.execute_reply": "2020-12-02T13:46:29.073263Z"
     }
    },
    "outputs": [],
@@ -333,10 +333,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.624923Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.624519Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.964147Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.963740Z"
+     "iopub.execute_input": "2020-12-02T13:46:29.088725Z",
+     "iopub.status.busy": "2020-12-02T13:46:29.088219Z",
+     "iopub.status.idle": "2020-12-02T13:46:29.493495Z",
+     "shell.execute_reply": "2020-12-02T13:46:29.493101Z"
     }
    },
    "outputs": [],
@@ -371,10 +371,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:13:26.967651Z",
-     "iopub.status.busy": "2020-10-26T12:13:26.967140Z",
-     "iopub.status.idle": "2020-10-26T12:13:26.970077Z",
-     "shell.execute_reply": "2020-10-26T12:13:26.969566Z"
+     "iopub.execute_input": "2020-12-02T13:46:29.496870Z",
+     "iopub.status.busy": "2020-12-02T13:46:29.496375Z",
+     "iopub.status.idle": "2020-12-02T13:46:29.499255Z",
+     "shell.execute_reply": "2020-12-02T13:46:29.498813Z"
     }
    },
    "outputs": [],
