--- a/docs/source/notebooks/dmd.ipynb
+++ b/docs/source/notebooks/dmd.ipynb
@@ -4,18 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dynamic mode decomposition\n",
-    "\n",
-    "Here we present the basic ideas behind a family of dynamic mode decomposition (DMD) methods. In particular the original \"standard DMD\"<cite data-cite=\"nbdmd-schmid2010dynamic\">(Schmid, 2010)</cite>, its variant \"exact DMD\"<cite data-cite=\"nbdmd-tu2013dynamic\">(Tu, 2013)</cite>, as well as \"extended DMD\" <cite data-cite=\"nbdmd-williams2015data\">(Williams, 2015)</cite>. The principle idea is that DMD should be able to characterize / decompose potentially highly nonlinear dynamics by solving linear systems of equations and studying their spectral properties."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Standard and exact DMD\n",
+    "## DMD\n",
     "\n",
     "For people already familiar with the method and interface, the [API docs](../api/generated/deeptime.decomposition.DMD.rst).\n",
+    "\n",
+    "Here we present the basic ideas behind a family of dynamic mode decomposition (DMD) methods. In particular the original \"standard DMD\"<cite data-cite=\"nbdmd-schmid2010dynamic\">(Schmid, 2010)</cite>, its variant \"exact DMD\"<cite data-cite=\"nbdmd-tu2013dynamic\">(Tu, 2013)</cite>. The principle idea is that DMD should be able to characterize / decompose potentially highly nonlinear dynamics by solving linear systems of equations and studying their spectral properties.\n",
     "\n",
     "Considering a sequential set of data vectors $\\{z_1,\\ldots,z_m\\}$ with $z_i\\in\\mathbb{R}^n$ and assuming that \n",
     "\n",
@@ -219,311 +212,6 @@
     "plt.scatter(*np.real(traj_standard)[::5].T, marker='*',alpha=.5, label='standard DMD')\n",
     "plt.scatter(*np.real(traj_exact)[::5].T, alpha=.1, label='exact DMD')\n",
     "plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extended DMD\n",
-    "\n",
-    "For people already familiar with the method and interface, the [API docs](../api/generated/deeptime.decomposition.EDMD.rst).\n",
-    "\n",
-    "Similarly to DMD, extended DMD (EDMD) <cite data-cite=\"nbdmd-williams2015data\">(Williams, 2015)</cite> is a data-driven method to approximate the Koopman operator. The Koopman operator $\\mathcal{K}$ describes how an observable of an (potentially stochastic) dynamical system evolves in time. In a discrete-time setting with $x_{t+1} = T(x_t)$ and an observable $g$, the Koopman operator is defined as\n",
-    "\n",
-    "$$\n",
-    "(\\mathcal{K} g)(x) = g(T(x)).\n",
-    "$$\n",
-    "\n",
-    "Given observation data $X$ and $Y$, where $y_i = T(x_i)$ and a basis set of functions or observables\n",
-    "\n",
-    "$$\n",
-    "B = \\{ \\psi_1,\\psi_2,\\ldots,\\psi_k \\},\n",
-    "$$\n",
-    "\n",
-    "one can define the transformed data $\\Psi_X$ and $\\Psi_Y$ with \n",
-    "\n",
-    "$$(\\Psi_*)_i = (\\psi_1(*_i),\\ldots, \\psi_k(*_i))^\\top, $$\n",
-    "\n",
-    "yielding\n",
-    "\n",
-    "$$\n",
-    "\\Psi_Y^\\top = \\Psi_X^\\top K.\n",
-    "$$\n",
-    "\n",
-    "Here, $K^\\top\\in\\mathbb{R}^{k\\times k}$ acting from the left is the projection of the true Koopman operator $\\mathcal{K}$ into the basis $B$.\n",
-    "\n",
-    "Usually one performs rank-truncation or has over-/underdetermined systems. In such cases, $K$ is determined via the pseudo-inverse $K=\\Psi_Y\\Psi_X^\\dagger$.\n",
-    "\n",
-    "In case of a basis $B$ which just contains the identity, EDMD reduces back to DMD."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To demonstrate EDMD and deeptime's API, we consider a [two-dimensional triple-well potential](../api/generated/deeptime.data.triple_well_2d.rst#deeptime.data.triple_well_2d) <cite data-cite=\"nbdmd-schutte2013metastability\">(Schütte, 2013)</cite>. It is defined on $[-2,2]\\times [-1, 2]$ and looks like the following:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:42.211907Z",
-     "iopub.status.busy": "2020-12-02T13:40:42.210870Z",
-     "iopub.status.idle": "2020-12-02T13:40:42.435097Z",
-     "shell.execute_reply": "2020-12-02T13:40:42.435476Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "x = np.linspace(-2, 2, num=100)\n",
-    "y = np.linspace(-1, 2, num=100)\n",
-    "XX, YY = np.meshgrid(x, y)\n",
-    "V = 3*np.exp(-(XX**2) - (YY - 1/3)**2) - 3*np.exp(-XX**2 - (YY - 5/3)**2) \\\n",
-    "    - 5*np.exp(-(XX-1)**2 - YY**2) - 5*np.exp(-(XX+1)**2 - YY**2) \\\n",
-    "    + (2/10)*XX**4 + (2/10)*(YY-1/3)**4\n",
-    "\n",
-    "plt.contourf(x, y, V, levels=np.linspace(-4.5, 4.5, 20), cmap='coolwarm');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inside this potential landscape we integrate particles subject to the stochastic differential equation\n",
-    "\n",
-    "$$ \\mathrm{d}X_t = \\nabla V(X_t) \\mathrm{d}t + \\sigma(t, X_t)\\mathrm{d}W_t $$\n",
-    "\n",
-    "with $\\sigma=1.09$, using an Euler-Maruyama integrator."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:42.991380Z",
-     "iopub.status.busy": "2020-12-02T13:40:42.990441Z",
-     "iopub.status.idle": "2020-12-02T13:40:43.172348Z",
-     "shell.execute_reply": "2020-12-02T13:40:43.171818Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import deeptime as dt\n",
-    "\n",
-    "system = dt.data.triple_well_2d()\n",
-    "traj = system.trajectory(x0=[[-1, 0]], n_evaluations=200, seed=66)\n",
-    "\n",
-    "plt.contourf(x, y, V, levels=np.linspace(-4.5, 4.5, 20), cmap='coolwarm')\n",
-    "plt.plot(*traj.T, c='black', lw=.5);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To approximate the Koopman operator, we first select 25000 random points inside the domain and integrate them for 10000 steps under an integration step of $h=10^{-5}$:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:43.176041Z",
-     "iopub.status.busy": "2020-12-02T13:40:43.175377Z",
-     "iopub.status.idle": "2020-12-02T13:40:56.202285Z",
-     "shell.execute_reply": "2020-12-02T13:40:56.202619Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "N = 25000\n",
-    "state = np.random.RandomState(seed=42)\n",
-    "X = np.stack([state.uniform(-2, 2, size=(N,)), state.uniform(-1, 2, size=(N,))]).T\n",
-    "Y = system(X, n_jobs=8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we pick a basis $B$ to be all monomials up to and including degree $\\mathrm{deg}=10$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:56.205908Z",
-     "iopub.status.busy": "2020-12-02T13:40:56.205419Z",
-     "iopub.status.idle": "2020-12-02T13:40:56.207802Z",
-     "shell.execute_reply": "2020-12-02T13:40:56.207238Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "basis = dt.basis.Monomials(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using this basis, we can fit an EDMD estimator and obtain the corresponding model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:56.328062Z",
-     "iopub.status.busy": "2020-12-02T13:40:56.327557Z",
-     "iopub.status.idle": "2020-12-02T13:40:56.461487Z",
-     "shell.execute_reply": "2020-12-02T13:40:56.462059Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "edmd_estimator = dt.decomposition.EDMD(basis, n_eigs=8)\n",
-    "edmd_model = edmd_estimator.fit((X, Y)).fetch_model()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can obtain the dominant eigenvalues associated to processes in the system."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:56.477160Z",
-     "iopub.status.busy": "2020-12-02T13:40:56.476591Z",
-     "iopub.status.idle": "2020-12-02T13:40:56.625835Z",
-     "shell.execute_reply": "2020-12-02T13:40:56.626269Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(np.real(edmd_model.eigenvalues), 'x')\n",
-    "plt.title('Dominant eigenvalues');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We project our input data $X$ using the eigenfunctions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:56.716746Z",
-     "iopub.status.busy": "2020-12-02T13:40:56.715797Z",
-     "iopub.status.idle": "2020-12-02T13:40:56.734319Z",
-     "shell.execute_reply": "2020-12-02T13:40:56.734997Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "phi = np.real(edmd_model.transform(X))\n",
-    "\n",
-    "# normalize\n",
-    "for i in range(len(edmd_model.eigenvalues)):\n",
-    "    phi[:, i] = phi[:, i] / np.max(np.abs(phi[:, i]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And visualize the first four eigenfunctions. They contain information about metastable regions and slow transitions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:56.755619Z",
-     "iopub.status.busy": "2020-12-02T13:40:56.751184Z",
-     "iopub.status.idle": "2020-12-02T13:40:58.890132Z",
-     "shell.execute_reply": "2020-12-02T13:40:58.890535Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(8, 8))\n",
-    "gs = fig.add_gridspec(ncols=2, nrows=2)\n",
-    "\n",
-    "ax = fig.add_subplot(gs[0, 0])\n",
-    "ax.scatter(*X.T, c=phi[:, 0], cmap='coolwarm')\n",
-    "ax.set_title('1st eigenfunction')\n",
-    "\n",
-    "ax = fig.add_subplot(gs[0, 1])\n",
-    "ax.scatter(*X.T, c=phi[:, 1], cmap='coolwarm')\n",
-    "ax.set_title('2nd eigenfunction')\n",
-    "\n",
-    "ax = fig.add_subplot(gs[1, 0])\n",
-    "ax.scatter(*X.T, c=phi[:, 2], cmap='coolwarm')\n",
-    "ax.set_title('3rd eigenfunction')\n",
-    "\n",
-    "ax = fig.add_subplot(gs[1, 1])\n",
-    "ax.scatter(*X.T, c=phi[:, 3], cmap='coolwarm')\n",
-    "ax.set_title('4th eigenfunction');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using a clustering can reveal temporally coherent structures."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-02T13:40:58.897077Z",
-     "iopub.status.busy": "2020-12-02T13:40:58.896470Z",
-     "iopub.status.idle": "2020-12-02T13:41:00.376166Z",
-     "shell.execute_reply": "2020-12-02T13:41:00.376709Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "kmeans = dt.clustering.Kmeans(n_clusters=6, n_jobs=4).fit(np.real(phi)).fetch_model()\n",
-    "c = kmeans.transform(np.real(phi))\n",
-    "\n",
-    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\n",
-    "ax1.scatter(*X.T, c=c)\n",
-    "ax1.set_title(r\"$t = 0$\")\n",
-    "ax1.set_aspect('equal')\n",
-    "ax1.set_xlim([-2.5, 2.5])\n",
-    "ax1.set_ylim([-1.5, 2.5])\n",
-    "ax1.contour(x, y, V, levels=np.linspace(-4.5, 4.5, 20), colors='black')\n",
-    "\n",
-    "ax2.scatter(*Y.T, c=c)\n",
-    "ax2.set_title(r\"$t = 0.1$\")\n",
-    "ax2.set_aspect('equal')\n",
-    "ax2.set_xlim([-2.5, 2.5])\n",
-    "ax2.set_ylim([-1.5, 2.5])\n",
-    "ax2.contour(x, y, V, levels=np.linspace(-4.5, 4.5, 20), colors='black');"
    ]
   },
   {
